--- a/public/index.css
+++ b/public/index.css
@@ -156,7 +156,7 @@
             color: var(--primary-color);
         }
 
-        #logout_button {
+        #logout_button,#delete_account_button {
             padding: 8px 34px;
             transition: all 0.1s ease-in-out;
             font-weight: bold;
@@ -165,7 +165,7 @@
             box-shadow: 5px 5px 3px black;
         }
 
-        #logout_button:hover {
+        #logout_button:hover,#delete_account_button:hover {
             box-shadow: 0px 0px 0px 0px black;
             font-style: italic;
             background-color: var(--primary-color);
